[tool.poetry]
name = "lesson-18"
version = "0.1.0"
description = ""
authors = ["Airon (Maxim Lysov) <maksim285@mail.ru>"]
readme = "README.md"
packages = [{include = "lesson_18"}]

[tool.poetry.dependencies]
python = "^3.9"
selene = "2.0.0rc2"
pytest = "^7.3.1"
requests = "^2.28.2"
pytest-voluptuous = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
